--- a/firstpage.html
+++ b/firstpage.html
@@ -2,7 +2,8 @@
 	<head>
 	<meta charset="utf-8">
 	<title>My first test page</title>
-	</head>
+	<link href="style/style.css" rel="stylesheet" type="text/css">	
+</head>
 	
 	<body>
 	<h1>Mozilla is cool</h1>
